Use socket_listener instead of statsd

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -33,13 +33,13 @@
   ## Telegraf will send metrics to outputs in batches of at most
   ## metric_batch_size metrics.
   ## This controls the size of writes that Telegraf sends to output plugins.
-  metric_batch_size = 1000
+  metric_batch_size = $TELEGRAF_METRIC_BATCH_SIZE
 
   ## For failed writes, telegraf will cache metric_buffer_limit metrics for each
   ## output, and will flush this buffer on a successful write. Oldest metrics
   ## are dropped first when this buffer fills.
   ## This buffer only fills when writes fail to output plugin(s).
-  metric_buffer_limit = 10000
+  metric_buffer_limit = $TELEGRAF_METRIC_BUFFER_LIMIT
 
   ## Collection jitter is used to jitter the collection by a random amount.
   ## Each plugin will sleep for a random time within jitter before collecting.
@@ -4111,15 +4111,15 @@
 #     tagvalue="postgresql.stats"
 
 
-# # Generic socket listener capable of handling multiple socket types.
-# [[inputs.socket_listener]]
-#   ## URL to listen on
-#   # service_address = "tcp://:8094"
+# Generic socket listener capable of handling multiple socket types.
+[[inputs.socket_listener]]
+  ## URL to listen on
+  # service_address = "tcp://:8094"
 #   # service_address = "tcp://127.0.0.1:http"
 #   # service_address = "tcp4://:8094"
 #   # service_address = "tcp6://:8094"
 #   # service_address = "tcp6://[2001:db8::1]:8094"
-#   # service_address = "udp://:8094"
+  service_address = "udp://:8094"
 #   # service_address = "udp4://:8094"
 #   # service_address = "udp6://:8094"
 #   # service_address = "unix:///tmp/telegraf.sock"
@@ -4158,13 +4158,13 @@
 #   ## Each data format has its own unique set of configuration options, read
 #   ## more about them here:
 #   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
-#   # data_format = "influx"
+  data_format = "influx"
 
 
 # # Statsd UDP/TCP Server
-[[inputs.statsd]]
-  ## Protocol, must be "tcp", "udp", "udp4" or "udp6" (default=udp)
-  protocol = "udp"
+# [[inputs.statsd]]
+#   ## Protocol, must be "tcp", "udp", "udp4" or "udp6" (default=udp)
+#   protocol = "udp"
 #
 #   ## MaxTCPConnection - applicable when protocol is set to tcp (default=250)
 #   max_tcp_connections = 250
@@ -4178,7 +4178,7 @@
 #   # tcp_keep_alive_period = "2h"
 #
   ## Address and port to host UDP listener on
-  service_address = ":8125"
+#   service_address = ":8125"
 #
 #   ## The following configuration options control when telegraf clears it's cache
 #   ## of previous values. If set to false, then telegraf will only clear it's
