--- a/telegraf.conf
+++ b/telegraf.conf
@@ -77,7 +77,7 @@
   ## Override default hostname, if empty use os.Hostname()
   hostname = ""
   ## If set to true, do no set the "host" tag in the telegraf agent.
-  omit_hostname = TELEGRAF_OMIT_HOSTNAME
+  omit_hostname = $TELEGRAF_OMIT_HOSTNAME
 
 
 ###############################################################################
